--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,7 +1,8 @@
 <!-- show nav links -->
 <!-- As a heading -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <%= link_to 'Portal Solicitudes', root_path,class:"navbar-brand"%>
+  <a class="navbar-brand" href="#">Portal Solicitudes</a>
+  
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
