--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -41,7 +41,7 @@
   background-size: cover;
 }
 .login-back{
-  background:url("coming-soon-bg.jpg") no-repeat;
+  background:image-url("coming-soon-bg.jpg") no-repeat;
   background-size:cover;
   background-position:top center;
 }
